--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -33,7 +33,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   padding: 0 24px;
   margin: 20px auto 0px auto;
 }
